# mini-xla-optimizer

./: CMakeLists.txt  LICENSE  README.md  env.sh
docs/: design.md  fusion_policy.md  testing.md  toy_notes.md
examples/: add_mul.mlir  add_zero.mlir  mul_one.mlir  mul_zero.mlir  pow_neg1.mlir  pow_neg2.mlir  pow_neg2_then_mul_one.mlir  pow_neg3_no_eliminate.mlir
include/Mini/: CMakeLists.txt  MiniDialect.h  MiniOps.h  MiniOps.td  MiniPasses.h
lib/Dialect/Mini/: CMakeLists.txt  MiniDialect.cpp  MiniOps.cpp
lib/Transforms/: CMakeLists.txt  CanonicalizeMini.cpp  FuseElementwiseMini.cpp  FusionAnalysisMini.cpp  MathEliminateMini.cpp
test/: run_filecheck.sh
test/Transforms/: canonicalize.mlir  fuse_elementwise.mlir  fusion_analysis.mlir  math_eliminate.mlir  pipeline.mlir  pipeline_math_then_fuse.mlir  pipeline_math_then_fusion.mlir
tools/: CMakeLists.txt
tools/mini-opt/: CMakeLists.txt  mini-opt.cpp
